crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__user-defined.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "User-defined dependent tiers: %xtra, %xcod, %xpho, %xmod (x-prefix tiers)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: x_dependent_tier, x_tier_prefix, media bullets in user-defined tiers,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "NAK-delimited timing in opaque tier content, multi-field user-defined tiers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": "extra annotation",
            "label": "xtra"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "extra coding",
            "label": "xcod"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "extra phonological",
            "label": "xpho"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "extra model",
            "label": "xmod"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": "LAT",
            "label": "xp"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "$5ml $0 tsp $na",
            "label": "xcod"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "swallow 3093_4877",
            "label": "xs1"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "multiple swallow 46639_50559",
            "label": "xs2"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "average_dB=\"-29.52\" peak_dB=\"-18.64\"",
            "label": "xdb"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "zero",
              "content": [
                {
                  "content": "zero",
                  "type": "text"
                }
              ],
              "raw_text": "zero",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
