crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__videos.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Alison",
            "role": "Participant",
            "speaker_code": "PAR1"
          },
          {
            "name": "Don",
            "role": "Participant",
            "speaker_code": "PAR2"
          },
          {
            "name": "Larry",
            "role": "Participant",
            "speaker_code": "PAR3"
          },
          {
            "name": "Barry",
            "role": "Participant",
            "speaker_code": "PAR4"
          },
          {
            "name": "Chris",
            "role": "Participant",
            "speaker_code": "PAR5"
          },
          {
            "name": "Christopher",
            "role": "Investigator",
            "speaker_code": "INV1"
          },
          {
            "name": "Denise",
            "role": "Investigator",
            "speaker_code": "INV2"
          },
          {
            "name": "Margie",
            "role": "Investigator",
            "speaker_code": "INV3"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Alison",
        "language": "eng",
        "role": "Participant",
        "sex": "female",
        "speaker": "PAR1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Don",
        "language": "eng",
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR2",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Larry",
        "language": "eng",
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR3",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Barry",
        "language": "eng",
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR4",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Chris",
        "language": "eng",
        "role": "Participant",
        "sex": "female",
        "speaker": "PAR5",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Christopher",
        "language": "eng",
        "role": "Investigator",
        "sex": "male",
        "speaker": "INV1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Denise",
        "language": "eng",
        "role": "Investigator",
        "sex": "female",
        "speaker": "INV2",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Scale",
        "custom_field": "Margie",
        "language": "eng",
        "role": "Investigator",
        "sex": "female",
        "speaker": "INV3",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "videos",
        "videos": "1a, 1b, 1c"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "videos",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 2364,
            "start_ms": 1600
          },
          "content": [
            {
              "content": [
                {
                  "content": "alright",
                  "type": "text"
                }
              ],
              "raw_text": "alright",
              "span": {
                "end": 707,
                "start": 700
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "INV1"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "INV1": {
      "birth_date": null,
      "code": "INV1",
      "id": {
        "corpus": "Scale",
        "custom_field": "Christopher",
        "language": "eng",
        "role": "Investigator",
        "sex": "male",
        "speaker": "INV1"
      },
      "name": "Christopher",
      "role": "Investigator"
    },
    "INV2": {
      "birth_date": null,
      "code": "INV2",
      "id": {
        "corpus": "Scale",
        "custom_field": "Denise",
        "language": "eng",
        "role": "Investigator",
        "sex": "female",
        "speaker": "INV2"
      },
      "name": "Denise",
      "role": "Investigator"
    },
    "INV3": {
      "birth_date": null,
      "code": "INV3",
      "id": {
        "corpus": "Scale",
        "custom_field": "Margie",
        "language": "eng",
        "role": "Investigator",
        "sex": "female",
        "speaker": "INV3"
      },
      "name": "Margie",
      "role": "Investigator"
    },
    "PAR1": {
      "birth_date": null,
      "code": "PAR1",
      "id": {
        "corpus": "Scale",
        "custom_field": "Alison",
        "language": "eng",
        "role": "Participant",
        "sex": "female",
        "speaker": "PAR1"
      },
      "name": "Alison",
      "role": "Participant"
    },
    "PAR2": {
      "birth_date": null,
      "code": "PAR2",
      "id": {
        "corpus": "Scale",
        "custom_field": "Don",
        "language": "eng",
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR2"
      },
      "name": "Don",
      "role": "Participant"
    },
    "PAR3": {
      "birth_date": null,
      "code": "PAR3",
      "id": {
        "corpus": "Scale",
        "custom_field": "Larry",
        "language": "eng",
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR3"
      },
      "name": "Larry",
      "role": "Participant"
    },
    "PAR4": {
      "birth_date": null,
      "code": "PAR4",
      "id": {
        "corpus": "Scale",
        "custom_field": "Barry",
        "language": "eng",
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR4"
      },
      "name": "Barry",
      "role": "Participant"
    },
    "PAR5": {
      "birth_date": null,
      "code": "PAR5",
      "id": {
        "corpus": "Scale",
        "custom_field": "Chris",
        "language": "eng",
        "role": "Participant",
        "sex": "female",
        "speaker": "PAR5"
      },
      "name": "Chris",
      "role": "Participant"
    }
  }
}
